--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,20 @@
 {
     "name": "Web-saude",
     "short_name": "Web-Saude",
+    "lang":"pt-br",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#00285f",
     "description": "Sistema que fornece informações de hospitais e clinicas e suas especilidades",
+    "theme_color":"#f9f9f1",
+    "orientation": "any",
+    "prefer_related_applications": false,
     "icons": [{
-      "src": "/assets/img/logo-icon.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    }, {
-      "src": "/assets/img/logo-icon.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    }, {
-      "src": "/assets/img/logo-icon.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "/assets/img/logo-icon.png",
-      "sizes": "168x168",
-      "type": "image/png"
-    }, {
-      "src": "/assets/img/logo-icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }],
-    "related_applications": [{
-      "platform": "web"
-    }, {
-      "platform": "play"
+      "src": "/assets/img/logo-web-saude.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }]
+   
+      
   }
